plugins {
    id 'com.android.application'
}
apply from: '../common.gradle'

def VERSION_NAME = "1.0.0"
def VERSION_CODE = 100

android {
    namespace = 'com.wcl.test'
    compileSdk = project.ext.COMPILE_SDK_VERSION

    defaultConfig {
        applicationId "com.wcl.test"
        minSdk project.ext.MIN_SDK_VERSION
        targetSdk project.ext.TARGET_SDK_VERSION
        versionCode VERSION_CODE
        versionName VERSION_NAME
        multiDexEnabled = true

        ndk {
            abiFilters 'arm64-v8a', 'armeabi-v7a'
            packagingOptions {
                doNotStrip '*/arm64-v8a/*.so'
                doNotStrip '*/armeabi-v7a/*.so'
            }
        }
    }

    signingConfigs {
        release {
            storeFile file('../keystore_debug.jks')
            keyAlias 'young_debug'
            storePassword '123abc'
            keyPassword '123abc'
        }
    }

    buildTypes {
        debug {
            signingConfig = signingConfigs.release
            buildConfigField 'boolean', 'LOG', 'true'
            manifestPlaceholders.put("test_app_key", "debug_111111")
        }
        release {
            signingConfig = signingConfigs.release
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField 'boolean', 'LOG', 'false'
            manifestPlaceholders.put("test_app_key", "release_0000000")
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    buildFeatures {
        viewBinding = true
        buildConfig = true
    }
    lint {
        abortOnError = false
    }
}

androidComponents {
    onVariants(selector().all()) { variant ->
        variant.outputs.forEach { output ->
            def buildType = variant.name
            def fileName = "base_project_${VERSION_NAME}_${buildType}.apk"
            output.outputFileName.set(fileName)
        }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
    implementation 'com.google.android.material:material:1.14.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.exifinterface:exifinterface:1.4.2'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'com.squareup.okhttp3:okhttp:5.4.0'
    implementation 'com.squareup.okio:okio:3.17.0'
    implementation 'com.google.code.gson:gson:2.14.0'
    implementation 'com.github.getActivity:GsonFactory:10.3'
    implementation 'com.google.android.flexbox:flexbox:3.0.0'
    implementation 'com.tencent:mmkv:2.4.0'
    implementation 'io.github.scwang90:refresh-layout-kernel:3.0.0-alpha'
    implementation 'io.github.youth5201314:banner:2.2.3'
    implementation 'com.github.bumptech.glide:okhttp3-integration:5.0.7'
    implementation 'com.github.bumptech.glide:glide:5.0.7'
    annotationProcessor 'com.github.bumptech.glide:compiler:5.0.7'
    implementation 'jp.wasabeef:glide-transformations:4.3.0'
    implementation 'com.github.donkingliang:ConsecutiveScroller:4.6.4'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.11.0'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.11.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.10.0'
    implementation 'androidx.lifecycle:lifecycle-process:2.10.0'
    implementation 'androidx.work:work-runtime:2.11.2'
    implementation 'androidx.percentlayout:percentlayout:1.0.0'
    implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
}
